# aace-execution

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  LICENSE  README.md  docker-compose.yml
aace-execution/: PLAN.md  hello.py  pyproject.toml  pyrightconfig.json  run_pipeline_demo.py
aace-execution/Contracts/: EXECUTION_CONTRACT.md  OPPORTUNITY_PIPELINE_JOB.md  PIPELINE_ORCHESTRATION_CONTRACT.md
aace-execution/Contracts/persistence/: PERSISTENCE_CONTRACT.md  PERSISTENCE_WRITER_CONTRACT.md  POSTGRES_PERSISTENCE_SCHEMA.md  POSTGRES_WRITER_IMPLEMENTATION_PLAN.md
aace-execution/Contracts/stages/: ALERT_DECISION_CONTRACT.md  DISCREPANCY_WORKER_CONTRACT.md  INPUT_VALIDATOR_CONTRACT.md  SCORING_WORKER_CONTRACT.md
aace-execution/examples/: pipeline_input_demo.json
aace-execution/scripts/: local_demo.py  test_postgres_writer.py
aace-execution/sql/: schema.sql  webhook_deliveries.sql  worker_opportunities.sql
aace-execution/src/aace_execution/: observability.py  worker.py
aace-execution/src/aace_execution/api/: main.py  (+2 more)
aace-execution/tests/: test_agent_webhook.py  test_alert_decision_worker.py  test_api_read_endpoints.py  test_api_run_pipeline.py  test_bensbargains_connector.py  test_cross_source_matcher.py  test_dealnews_connector.py  test_discrepancy_worker.py  test_input_validator.py  test_opportunity_scorer.py  test_pipeline_runner.py  test_pipeline_with_persistence.py  test_postgres_writer.py  test_reddit_connector.py  test_scoring_worker.py  test_slickdeals_connector.py  test_techbargains_connector.py  test_worker.py  test_worker_opportunity_writer.py
(+88 files in other folders)
