[project]
name = "aace-execution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.0",
    "feedparser>=6.0.11",
    "httpx>=0.28.1",
    "pip>=26.0.1",
    "psycopg[binary]>=3.3.3",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
    "streamlit>=1.56.0",
    "uvicorn>=0.30.0",
    "watchdog>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aace_execution"]

[dependency-groups]
dev = []
